[project]
name = "tempest-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "paho-mqtt>=2.1.0",
    "playwright>=1.51.0",
    "python-dotenv>=1.1.0",
    "schedule>=1.2.2",
    "tzdata>=2025.2",
    "ruff>=0.3.4",
]

[tool.ruff]
target-version = "py312"
line-length = 120

select = ["E", "F", "W", "I", "UP", "B", "SIM", "C"]
ignore = ["E501"]  # line length handled by formatter

fixable = ["ALL"]
exclude = [".git", ".ruff_cache", ".venv", "__pycache__", "build", "dist"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.isort]
known-first-party = ["tempest_scraper"]
